[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/NotificationPanel/TowerEmptySlotNotifPanel/TowerEmptySlotNotifPanel_BodyBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_BottomBorder.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/NotificationPanel/TowerEmptySlotNotifPanel/TowerEmptySlotNotifPanel_TopBorder.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/NotificationPanel/TowerEmptySlotNotifPanel/TowerEmptySlotNotifPanel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="TowerEmptySlotNotifPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotifContainer" type="MarginContainer" parent="."]
margin_right = 160.0
margin_bottom = 69.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="NotifContainer"]
margin_right = 160.0
margin_bottom = 69.0
mouse_filter = 2
custom_constants/separation = 0

[node name="TopBorder" type="TextureRect" parent="NotifContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="ContentPanel" type="MarginContainer" parent="NotifContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 68.0
mouse_filter = 2
size_flags_vertical = 3

[node name="BodyBackground" type="TextureRect" parent="NotifContainer/VBoxContainer/ContentPanel"]
margin_right = 160.0
margin_bottom = 54.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LabelMarginer" type="MarginContainer" parent="NotifContainer/VBoxContainer/ContentPanel"]
margin_right = 160.0
margin_bottom = 54.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 4
custom_constants/margin_left = 2
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NotifContainer/VBoxContainer/ContentPanel/LabelMarginer"]
margin_left = 2.0
margin_top = 4.0
margin_right = 158.0
margin_bottom = 51.0
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="NotifContainer/VBoxContainer/ContentPanel/LabelMarginer/VBoxContainer"]
margin_left = 51.0
margin_right = 105.0
margin_bottom = 17.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "Towers"

[node name="TowerLimitLabel" type="Label" parent="NotifContainer/VBoxContainer/ContentPanel/LabelMarginer/VBoxContainer"]
margin_left = 43.0
margin_top = 21.0
margin_right = 113.0
margin_bottom = 47.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.752941, 0.0313726, 1 )
text = "5 / 5"

[node name="BottomBorder" type="TextureRect" parent="NotifContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 160.0
margin_bottom = 69.0
mouse_filter = 2
texture = ExtResource( 3 )
